# tts_tools

./:  MANIFEST.in  .gitignore  README.md  binary_setup.py  build.sh  pyproject.toml  requirements.txt  tts_cli.py
.github/workflows/: python-package.yml  release.yaml  test.yml
doc/: 需求.md  需求分析文档.md
docs/: 功能需求.md  需求.md
src/: edge_model.py  edge_tts.py  edge_tts_sdk.py  tts.py  tts_cli.py
src/tts_tool/: edge_model.py  edge_tts.py  edge_tts_sdk.py  tts.py
tests/: 802bc90d622222b8ac3543b25ef9db44_copy.srt  audiometadatas_long.json  audiometadatas_long2.json  audiometadatas_long_origin.json  audiometadatas_short.json  test.txt  test2.txt  test2_vtb75e7e604a3d9114c33cf32e20306622.srt.audiometadatas  test2_vtb75e7e604a3d9114c33cf32e20306622.srt.rsts  test_edge_tts.py  test_edge_tts_sdk.py  test_tts.py  test_tts_cli.py  test_vtb75e7e604a3d9114c33cf32e20306622.srt  test_vtb75e7e604a3d9114c33cf32e20306622.srt.audiometadatas  test_vtb75e7e604a3d9114c33cf32e20306622.srt.rsts
